# analyse-audio-python

./: .gitignore  README.md  analyse_audio.ipynb  analyse_audio_features.ipynb  analyse_audio_first_steps.ipynb  analyse_audio_tempo_bpm.ipynb  extract-librosa-data.py  main.py  pyproject.toml  visualise-data-scratch.ipynb
model_one_mean_min_max_features/: make_training_data.py  model_test_one.py
model_one_mean_min_max_features_add_tempo/: mean_min_max_model.ipynb  mean_min_max_model_three.ipynb
model_one_mean_min_max_features_add_zero_crossing_rate/: mean_min_max_model.ipynb
model_one_mean_min_max_features_one/: make_training_data.py  mean_min_max_model.ipynb
model_one_mean_min_max_features_three/: make_training_data.py  model_test_one.py
model_one_mean_min_max_features_three_add_tempo/: make_training_data_dynamic_tempo.py  model_test_one.py
model_one_mean_min_max_features_two/: model_test_one.py
model_one_mean_min_max_features_two_add_zero_crossing_rate/: make_training_data.py  model_test_one.py
model_three_random_forest/: make_training_data.py  model_test_one.py  random_forest_model.ipynb  random_forest_model_one.ipynb
model_three_random_forest_more_features_and_statistics/: random_forest_model.ipynb  random_forest_model_with_tempo.ipynb
model_two_mfcc_mean_min_max/: make_features.py  make_training_data.py  mfcc_mean_min_max_model.ipynb  train_model.py  visualise_data.ipynb
model_two_mfcc_only/: make_features.py  make_features_mfcc_flattened.py  make_features_mfcc_normalised.py  make_training_data.py  train_model.py  visualise_data.ipynb
(+40 files in other folders)
