[tool.poetry]
name = "analyse-audio"
version = "0.1.0"
description = ""
authors = ["order&chaos <sean@orderandchaoscreative.com>"]
readme = "README.md"
packages = [{include = "analyse_audio"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
librosa = "^0.10.0.post2"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
numpy = "^1.23"
tensorflow = "^2.12.0"
pandas = "^2.0.1"
pydot = "^1.4.2"
graphviz = "^0.20.1"
seaborn = "^0.12.2"
altair = "^5.0.0"
scipy = "^1.10.1"
tensorflow-decision-forests = "^1.3.0"
sns = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

